upgaded expo version && added language support
Took 40 minutes

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,9 +1,11 @@
 {
   "search": "Search",
-  "stationsFound": "Found <v> stations",
+  "stationsFound": "Found <v> station(s)",
   "temperature": "Temperature",
-  "temperatureIndex": "Temperature Index",
+  "temperatureIndex": "Perceived temperature",
+  "temperatureIndexShort": "Perceived",
   "humidity": "Humidity",
   "name": "Name",
-  "height": "Height"
+  "height": "Height",
+  "lastMeasurement": "Last measurement"
 }
