--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -1,9 +1,11 @@
 {
   "search": "Suchen",
-  "stationsFound": "<v> Stationen gefunden",
+  "stationsFound": "<v> Station(en) gefunden",
   "temperature": "Temperatur",
   "temperatureIndex": "Gefühlte Temperatur",
+  "temperatureIndexShort": "Gefühlt",
   "humidity": "Luftfeuchtigkeit",
   "name": "Name",
-  "height": "Höhe"
+  "height": "Höhe",
+  "lastMeasurement": "Letzte Messung"
 }
