added dutch, spanish and chinese (simplified). fixed day and week not being translated
Took 33 minutes

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -7,5 +7,7 @@
   "humidity": "Luftfeuchtigkeit",
   "name": "Name",
   "height": "Höhe",
-  "lastMeasurement": "Letzte Messung"
+  "lastMeasurement": "Letzte Messung",
+  "week": "Woche",
+  "day": "Tag"
 }
