--- a/assets/translations/ro.json
+++ b/assets/translations/ro.json
@@ -7,5 +7,7 @@
   "humidity": "Umiditate",
   "name": "Nume",
   "height": "Înălțime",
-  "lastMeasurement": "Ultima măsurare"
+  "lastMeasurement": "Ultima măsurare",
+  "week": "Săptămâna",
+  "day": "Zi"
 }
